--- a/17th10-2020/LAYOUT-HTML4/index1a.html
+++ b/17th10-2020/LAYOUT-HTML4/index1a.html
@@ -12,7 +12,7 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         .site-warp{
-            width: 1200px;
+            width: 100%;
             margin: 0 auto;
             /* căn giữa màn hình  */
             height: 1000px;
@@ -54,9 +54,10 @@
             width: 100%;
             margin: 5px 0;
             height: 70%;
+            height: 70%;
         }
         .sidebar{
-            width: 25%;
+            width: 20%;
             height: 100%;
             background-color: dimgray;
             color: gainsboro;
@@ -74,7 +75,7 @@
         }
         .main-content{
             /* height: auto; */
-            width: 50%;
+            width: 60%;
             height: 100%;
             float: left;
             background-color: lightgray;
@@ -108,7 +109,7 @@
         </div> <!-- end .header -->
         
         <div class="nav">
-            <ul>
+            <ul class="clearfix">
                 <li><a href="#">Trang chủ</a></li>
                 <li><a href="#">Kinh tế</a></li>
                 <li><a href="#">Văn hóa</a></li>
